[package]
name = "api-gateway"
version = "0.1.0"
authors = [ "" ]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name = "api_gateway"

[dependencies]
async-trait = "0.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.86"
wasmbus-rpc = "0.15"
wasmcloud-interface-httpserver = "0.12"
wasmcloud-interface-logging = "0.11"
authtoken-interface = { path="../custom-interfaces/authtoken-interface/rust" }

[dev-dependencies]
base64 = "0.13"

# build-dependencies needed for build.rs
[build-dependencies]
weld-codegen = "0.7.0"

[profile.release]
# Optimize for small code size
lto = true
opt-level = "s"
strip = true
