[package]
name = "authtoken"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
tracing = "0.1.37"
serde = { version = "1.0", features = ["derive"] }
wasmbus-rpc = { version = "0.15", features = ["otel"] }
authtoken-interface = { path="../../custom-interfaces/authtoken-interface/rust" }
jsonwebtoken = "9.2"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.9"
tokio = { version = "1", features = [ "full" ] }

[[bin]]
name = "authtoken"
path = "src/main.rs"
