[package]
name = "password"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
tracing = "0.1.37"
wasmbus-rpc = { version = "0.15", features = ["otel"] }
password-interface = { path="../../custom-interfaces/password-interface/rust" }
bcrypt = "0.15"

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.9"
tokio = { version = "1", features = [ "full" ] }

[[bin]]
name = "password"
path = "src/main.rs"
