[package]
name = "time"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
async-trait = "0.1"
tracing = "0.1.37"
wasmbus-rpc = { version = "0.15", features = ["otel"] }
time-interface = { path="../../custom-interfaces/time-interface/rust"}

# test dependencies
[dev-dependencies]
wasmcloud-test-util = "0.9"
tokio = { version = "1", features = [ "full" ] }

[[bin]]
name = "time"
path = "src/main.rs"
